   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

Plone 4.0 - UNRELEASED
----------------------

- Removed application level error message handling. This needs to be handled
  in the WSGI pipeline. This refs http://dev.plone.org/plone/ticket/8798.
  [hannosch]

- merged down workaround for IE6 background caching problem, closes
  https://dev.plone.org/plone/ticket/7445, thanks cwainwright
  [calvinhp]

- Removed old background icon from personal bar for RTL scripts.
  Closes http://dev.plone.org/plone/ticket/4570
  [emanlove]

- Merged in more performance optimizations from experimental.contentcreation.
  We don't restrict the permissions for the temporary folder anymore, but
  only care about the permissions of the actual target folder.
  [hannosch]

- Removed the overly complex and convoluted `CatalogNavigationTabs` view
  and corresponding options. This use-case is better served by simple static
  viewlets or less general implementations.
  [hannosch]

- Use the new `icon_expr` for specifying icons for content types instead.
  [hannosch]

- Prefer path expressions over Python expressions for persistent expressions.
  [hannosch]

- Use the new `kupu_enabled` browser view instead to determine Kupu
  availability. Change a Python expression to a path expression for the
  is_rtl check.
  [hannosch]

- Simplified the getIconFor method on the plone tool to only look at the
  action itself.
  [hannosch]

- Removed the dependency on plone.app.linkintegrity. The implementation does
  currently not work in a WSGI environment.
  [hannosch]

- Removed accessibility_info page and corresponding JavaScript. The content
  of the page was applicable to Plone itself, but not the site driven by
  Plone. The content is better placed as a marketing text on plone.org.
  [hannosch]

- Removed site_actions action category. The corresponding viewlet uses simple