@@ -59,12 +59,12 @@ class Plone(BrowserView):
         """Return an index iterator."""
         return utils.RealIndexIterator(pos=pos)
 
-    def toLocalizedTime(self, time, long_format=None):
+    def toLocalizedTime(self, time, long_format=None, time_only=None):
         """Convert time to localized time
         """
         context = aq_inner(self.context)
         util = getToolByName(context, 'translation_service')
-        return util.ulocalized_time(time, long_format, context=context,
+        return util.ulocalized_time(time, long_format, time_only, context=context,
                                     domain='plonelocales', request=self.request)
     
     @memoize
